# NE_SystemC

./: sample.txt
MK_SystemC_VirtualPrototyping-master/: DRIVE_URL
MK_SystemC_VirtualPrototyping-master/Chapter1_OO_CPP/C++_LEC_Codes/CAR/: main  main.cpp  test  test.cpp
MK_SystemC_VirtualPrototyping-master/Chapter1_OO_CPP/C++_LEC_Codes/CallByValue_CBRef/: main  main.cpp
MK_SystemC_VirtualPrototyping-master/Chapter1_OO_CPP/C++_LEC_Codes/Inheritance_and_more/: vehicle  vehicle.cpp
MK_SystemC_VirtualPrototyping-master/Chapter2_SC_Basics/: 1_simple_adder
MK_SystemC_VirtualPrototyping-master/IMP_Files/: REPO_LINK.txt  Readme.txt  cmake_process.sh
MK_SystemC_VirtualPrototyping-master/REPO_DIVIDED_MK/: cmake_process.sh
MK_SystemC_VirtualPrototyping-master/REPO_DIVIDED_MK/0_verm/: README
MK_SystemC_VirtualPrototyping-master/REPO_DIVIDED_MK/0_verm/tlm_lt_initiator_interconnect_target/: main.cpp
MK_SystemC_VirtualPrototyping-master/REPO_DIVIDED_MK/1_templates/: basic_module.cpp  basic_module.h  binding.cpp
MK_SystemC_VirtualPrototyping-master/REPO_DIVIDED_MK/L2_SC_basics/sc_event_and_queue/: main.cpp
MK_SystemC_VirtualPrototyping-master/REPO_DIVIDED_MK/L2_SC_basics/thread_example/: thread_example.cpp
MK_SystemC_VirtualPrototyping-master/REPO_DIVIDED_MK/L3_SC_advanced/custom_fifo/: main.cpp
MK_SystemC_VirtualPrototyping-master/REPO_DIVIDED_MK/L3_SC_advanced/custom_signal/: main.cpp
MK_SystemC_VirtualPrototyping-master/REPO_DIVIDED_MK/L3_SC_advanced/dynamic_processes/: main.cpp
MK_SystemC_VirtualPrototyping-master/REPO_DIVIDED_MK/L3_SC_advanced/event_finder/: main.cpp
MK_SystemC_VirtualPrototyping-master/REPO_DIVIDED_MK/L3_SC_advanced/kpn_example/: kpn.cpp
MK_SystemC_VirtualPrototyping-master/REPO_DIVIDED_MK/L3_SC_advanced/portarrays/: main.cpp
MK_SystemC_VirtualPrototyping-master/REPO_DIVIDED_MK/L3_SC_advanced/reporting/: main.cpp
MK_SystemC_VirtualPrototyping-master/REPO_DIVIDED_MK/L4_TLM_basics/tlm_lt_debug_transport/: main.cpp
MK_SystemC_VirtualPrototyping-master/REPO_DIVIDED_MK/L4_TLM_basics/tlm_lt_initiator_interconnect_target/: main.cpp
MK_SystemC_VirtualPrototyping-master/REPO_DIVIDED_MK/L4_TLM_basics/tlm_lt_initiator_target/: main.cpp
MK_SystemC_VirtualPrototyping-master/REPO_DIVIDED_MK/L4_TLM_basics/tlm_quantum_keeper/: main.cpp
MK_SystemC_VirtualPrototyping-master/REPO_DIVIDED_MK/OLD/: CMakeLists.txt
MK_SystemC_VirtualPrototyping-master/REPO_DIVIDED_MK/OLD/L2_SC_basics/delta_delay/: delta_delay.cpp
MK_SystemC_VirtualPrototyping-master/REPO_DIVIDED_MK/OLD/L2_SC_basics/feedback_loop/: feedback_loop.cpp
MK_SystemC_VirtualPrototyping-master/REPO_DIVIDED_MK/OLD2/: CMakeLists.txt
MK_SystemC_VirtualPrototyping-master/REPO_DIVIDED_MK/OLD2/0_verm/: README
MK_SystemC_VirtualPrototyping-master/REPO_DIVIDED_MK/OLD2/0_verm/register/: main.cpp  (+1 more)
MK_SystemC_VirtualPrototyping-master/REPO_DIVIDED_MK/OLD2/1_templates/: CMakeLists.txt
MK_SystemC_VirtualPrototyping-master/REPO_DIVIDED_MK/OLD2/a_mk_final_exercises/ex_2/task4_anotherImplementation/: CMakeLists.txt  mon.h  nand.h  stim.h
MK_SystemC_VirtualPrototyping-master/REPO_DIVIDED_MK/OLD2/a_mk_final_exercises/ex_4/MK_another_soln/ex4/part3/: CMakeLists.txt
MK_SystemC_VirtualPrototyping-master/REPO_DIVIDED_MK/OLD2/a_mk_final_exercises/ex_4/part4/: CMakeLists.txt  main.cpp  transition.h
MK_SystemC_VirtualPrototyping-master/REPO_DIVIDED_MK/a_mk_final_exercises/ex_2/: nand.h  stim.h
MK_SystemC_VirtualPrototyping-master/REPO_DIVIDED_MK/a_mk_final_exercises/ex_2/task4/: CMakeLists.txt  exor_main.cpp  mon.h
MK_SystemC_VirtualPrototyping-master/REPO_DIVIDED_MK/a_mk_final_exercises/ex_3/: state_machine.h
MK_SystemC_VirtualPrototyping-master/REPO_DIVIDED_MK/a_mk_final_exercises/ex_3/part3/: CMakeLists.txt
MK_SystemC_VirtualPrototyping-master/REPO_DIVIDED_MK/a_mk_final_exercises/ex_5/: CMakeLists.txt  kpn.cpp  kpn.h
MK_SystemC_VirtualPrototyping-master/REPO_DIVIDED_MK/a_mk_final_exercises/ex_6/: CMakeLists.txt  main.cpp  processor.h
MK_SystemC_VirtualPrototyping-master/REPO_DIVIDED_MK/a_mk_final_exercises/ex_8/: CMakeLists.txt  initiator.h
NE_Ref/: TLM Notes
NE_Ref/01-System C Basics L1-3/01-Adder/: CMakeLists.txt  main.cpp
NE_Ref/01-System C Basics L1-3/02-SimpleFIFO/: CMakeLists.txt  main.cpp
NE_Ref/01-System C Basics L1-3/03-Custom Primitive channel/: main.cpp
NE_Ref/01-System C Basics L1-3/04-CustomSignal/: CMakeLists.txt  main.cpp
NE_Ref/02-L4_TLM_basics/01-custom_tlm/: main.cpp
NE_Ref/02-L4_TLM_basics/02-tlm_lt_debug_transport/: main.cpp
NE_Ref/Exercises/Exercise2/: CMakeLists.txt  Task4-exor-main.cpp  exor.h  exor_main.cpp  mon.h  nand.h  nand_main.cpp  stim.h  task4-stim.h
NE_Ref/Exercises/Exercise3/: CMakeLists.txt  main.cpp  state_machine.h
NE_Ref/Exercises/Exercise4/Part1/: CMakeLists.txt  main.cpp  place.h  transition.h
NE_Ref/Exercises/Exercise4/Part2/: main.cpp  place.h  transition.h
NE_Ref/Exercises/Exercise4/Part3/: CMakeLists.txt  main.cpp  place.h  transition.h
NE_Ref/Exercises/Exercise4/Part4/: main.cpp  place.h  transition.h
NE_Ref/Exercises/Exercise4/Part5/: main.cpp  place.h  subnet.h  transition.h
NE_Ref/Exercises/Exercise5/: CMakeLists.txt  kpn.cpp  kpn.h
(+67 files in other folders)
